# starfishDetection

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  cloudbuild.yaml  data.dvc  index.html  mkdocs-old.yaml  mkdocs.yml  model_test_nb.ipynb  pyproject.toml  requirements.txt  requirements_backend_inference.txt  requirements_dev.txt  requirements_frontend_inference.txt  ssdlite_tests.ipynb  tasks.py  test.ipynb  vertex_ai_train.yaml
.dvc/: config
.github/workflows/: cml_data.yaml  pre_commit.yaml  tests.yaml
apis/: inference.py  inference_backend.py  requirements_api.txt
application/: index.html
code/: index.html
configs/: main_config.yaml  starfish_data.yaml  sweep_config.yaml  vertex_ai_config.yaml
configs/callbacks/: default_callbacks.yaml  wandb_image_logger.yaml
configs/data/: default_data_module.yaml
configs/experiment/: profile.yaml  train_local.yaml
configs/logger/: wandb_logger.yaml
configs/model/: default_model.yaml
configs/trainer/: default_trainer.yaml
data/: .gitignore  raw.dvc
dockerfiles/: api.dockerfile  data_drift.dockerfile  inference_backend.dockerfile  inference_frontend.dockerfile  train.dockerfile
docs/: application.md  code.md  index.md  training.md
docs/source/: index.md
lightning_logs/version_1/: events.out.tfevents.1737112305.rosas-air.students.clients.local.4244.0
reports/: README.md
search/: search_index.json
source/: index.html
src/starfish/: api.py  data.py  (+13 more)
tests/: __init__.py  test_data.py  test_util.py
training/: index.html
wandb/: latest-run  latest-run 2  latest-run 3
(+85 files in other folders)
